[Fix] generate docs workflow

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -64,24 +64,26 @@ jobs:
             repo_name=$(basename $repo)
             echo "[$repo_name](./$repo_name/)" >> ./docs/index.md
           done < repos.txt
-          
-          output="_data/repos.yml"
-          echo "" > $output
-          
+      - name: Generate _data/repos.yml
+        run: |
+          mkdir -p _data
+          echo "" > _data/repos.yml
+
           for repo in ./docs/*; do
             if [ -d "$repo" ]; then
               repo_name=$(basename "$repo")
-              echo "- name: $repo_name" >> $output
-              echo "  sections:" >> $output
+              echo "- name: $repo_name" >> _data/repos.yml
+              echo "  sections:" >> _data/repos.yml
               for file in "$repo"/*.md; do
-                section_name=$(basename "$file" .md | sed 's/-/ /g' | sed 's/\b\(.\)/\u\1/g')
-                section_link="/$repo_name/$(basename "$file" .md)"
-                echo "    - title: $section_name" >> $output
-                echo "      link: $section_link" >> $output
+                if [ -f "$file" ]; then
+                  section_name=$(basename "$file" .md | sed 's/-/ /g' | sed 's/\b\(.\)/\u\1/g')
+                  section_link="/$repo_name/$(basename "$file" .md)"
+                  echo "    - title: $section_name" >> _data/repos.yml
+                  echo "      link: $section_link" >> _data/repos.yml
+                fi
               done
             fi
           done
-
       - name: Commit and push changes
         run: |
           if git diff --quiet ./docs; then
