--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -90,6 +90,7 @@ jobs:
             echo "Žádné změny v docs, nic k commitování."
           else
             git add ./docs
+            git add .
             git add ./docs/**/*.*
             git commit -m "[Update] Automate update documentation"
             git push origin HEAD:main
