--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -2,11 +2,11 @@
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
-  workflow_run:
-    workflows:
-      - Generate Documentation from All Repositories
-    types:
-      - completed
+#  workflow_run:
+#    workflows:
+#      - Generate Documentation from All Repositories
+#    types:
+#      - completed
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
