[Fix] generate docs workflow

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -61,7 +61,7 @@ jobs:
             repo_name=$(basename $repo)
             echo "[$repo_name](./$repo_name/)" >> ./docs/index.md
           
-            rm -rf $repo  # Odstraní repozitář po zpracování
+            rm -rf $repo_name  # Odstraní repozitář po zpracování
           done < repos.txt
       - name: Generate _data/repos.yml
         run: |
