--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -78,7 +78,7 @@ jobs:
               for file in "$repo"/*.md; do
                 if [ -f "$file" ]; then
                   section_name=$(basename "$file" .md | sed 's/-/ /g' | sed 's/\b\(.\)/\u\1/g')
-                  section_link="/$repo_name/$(basename "$file" .md)"
+                  section_link="/docs/$repo_name/$(basename "$file" .md)"
                   echo "    - title: $section_name" >> _data/repos.yml
                   echo "      link: $section_link" >> _data/repos.yml
                 fi
