--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -76,7 +76,7 @@ jobs:
               echo "- name: $repo_name" >> _data/repos.yml
               echo "  sections:" >> _data/repos.yml
               for file in "$repo"/*.md; do
-                if [ -f "$file" ]; then
+                if [ -f "$file" ] && [[ $(basename "$file") != "README.md" ]]; then
                   section_name=$(basename "$file" .md | sed 's/-/ /g' | sed 's/\b\(.\)/\u\1/g')
                   section_link="/docs/$repo_name/$(basename "$file" .md)"
                   echo "    - title: $section_name" >> _data/repos.yml
