--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -49,8 +49,8 @@ jobs:
             if [ -d "$REPO_NAME/docs" ]; then
               echo "Nalezená složka docs v repozitáři: $repo"
           
-              if compgen -G "$REPO_NAME/docs/*.md" > /dev/null; then
-                cp $REPO_NAME/docs/*.md ./docs/$REPO_NAME/
+              if compgen -G "$REPO_NAME/docs/*.*" > /dev/null; then
+                cp $REPO_NAME/docs/*.* ./docs/$REPO_NAME/
               else
                 echo "Žádné Markdown soubory nenalezeny ve složce docs v repozitáři: $repo"
               fi
