[Fix] case when some file was removed in repository

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Clone repositories and copy docs
         run: |
+          rm -f -R ./docs
           mkdir -p ./docs
           CURRENT_REPO="${{ github.repository }}"
           
