[Add] node markdown table formatter

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -92,6 +92,12 @@ jobs:
               done
             fi
           done
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: |
+          npm install markdown-table-formatter -g
+          markdown-table-formatter **/docs/*.md
       - name: Commit and push changes
         run: |
           if git diff --quiet ./; then
