--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -127,6 +127,8 @@ jobs:
       - name: Generate the sitemap
         id: sitemap
         uses: cicirello/generate-sitemap@v1
+        with:
+          base-url-path: https://gouef.github.io/
       - name: Deploy Documentation to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
