fixup! [Add] generate sitemap

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -145,5 +145,6 @@ jobs:
           folder: docs
           clean-exclude:
             sitemap.xml
+            docs/sitemap.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
