--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "Jan Galek"
+          git config --global user.email "ghome.cz@gmail.com"
 
       - name: Get list of repositories
         id: repos
