[Update] Automate update documentation

--- a/_data/repos.yml
+++ b/_data/repos.yml
@@ -21,6 +21,10 @@
   sections:
 - name: database
   sections:
+- name: datagrid
+  sections:
+    - title: Badges
+      link: /docs/datagrid/Badges
 - name: datetime
   sections:
 - name: diago
