[Update] Automate update documentation

--- a/_data/repos.yml
+++ b/_data/repos.yml
@@ -51,6 +51,8 @@
       link: /docs/html/Badges
 - name: logger
   sections:
+- name: lust-goddess
+  sections:
 - name: math
   sections:
 - name: mode
