[Update] Automate update documentation

--- a/_data/repos.yml
+++ b/_data/repos.yml
@@ -71,6 +71,10 @@
   sections:
 - name: paginator
   sections:
+- name: passwords
+  sections:
+    - title: Badges
+      link: /docs/passwords/Badges
 - name: permission
   sections:
     - title: AccessControl
