[Update] Automate update documentation

--- a/_data/repos.yml
+++ b/_data/repos.yml
@@ -103,6 +103,10 @@
   sections:
 - name: tester
   sections:
+- name: translator
+  sections:
+    - title: Badges
+      link: /docs/translator/Badges
 - name: utils
   sections:
 - name: validator
