[Update] Automate update documentation

--- a/_data/repos.yml
+++ b/_data/repos.yml
@@ -31,6 +31,10 @@
   sections:
     - title: Extensions
       link: /docs/diago/extensions
+- name: finder
+  sections:
+    - title: Badges
+      link: /docs/finder/Badges
 - name: forms
   sections:
     - title: Badges
