[Update] Automate update documentation

--- a/_data/repos.yml
+++ b/_data/repos.yml
@@ -77,6 +77,12 @@
   sections:
 - name: passwords
   sections:
+    - title: Argon
+      link: /docs/passwords/Argon
+    - title: Bcrypt
+      link: /docs/passwords/Bcrypt
+    - title: Passwords
+      link: /docs/passwords/passwords
 - name: permission
   sections:
     - title: AccessControl
