[Update] Automate update documentation

--- a/_data/repos.yml
+++ b/_data/repos.yml
@@ -63,6 +63,10 @@
   sections:
     - title: Badges
       link: /docs/html/Badges
+- name: latte
+  sections:
+    - title: Badges
+      link: /docs/latte/Badges
 - name: logger
   sections:
 - name: lust-goddess
